--- a/flower_delivery/flowers/templates/flower_catalog.html
+++ b/flower_delivery/flowers/templates/flower_catalog.html
@@ -1,23 +1,29 @@
 {% extends 'base.html' %}
 
-{% block title %}Каталог цветов{% endblock %}
-
 {% block content %}
-<h1>Каталог цветов</h1>
-<div class="row">
-    {% for flower in flowers %}
-    <div class="col-md-4">
-        <div class="card mb-4">
-            <img src="{{ flower.image.url }}" class="card-img-top" alt="{{ flower.name }}">
-            <div class="card-body">
-                <h5 class="card-title">{{ flower.name }}</h5>
-                <p class="card-text">{{ flower.description }}</p>
-                <p class="card-text">Цена: {{ flower.price }} ₽</p>
-                <a href="{% url 'checkout' flower.id %}" class="btn btn-primary">Оформить заказ</a>
+<div class="container mt-4">
+    <div class="row">
+        {% for flower in flowers %}
+            <div class="col-md-4 mb-4">
+                <div class="card h-100">
+                    <img src="{{ flower.image.url }}" class="card-img-top" alt="{{ flower.name }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ flower.name }}</h5>
+                        <p class="card-text">{{ flower.description }}</p>
+                        <p class="card-text"><strong>{{ flower.price }} руб.</strong></p>
+                    </div>
+                    <div class="card-footer text-center">
+                        <!-- Кнопка для выбора букета -->
+                        <form action="{% url 'checkout' flower.id %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit" class="btn btn-success">Выбрать букет</button>
+                        </form>
+                    </div>
+                </div>
             </div>
-        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
 </div>
 {% endblock %}
+
 
