update order_history, orders\urls

--- a/flower_delivery/flowers/templates/order_history.html
+++ b/flower_delivery/flowers/templates/order_history.html
@@ -11,6 +11,7 @@
             <th>Дата заказа</th>
             <th>Статус</th>
             <th>Цветы</th>
+            <th>Детали</th>
         </tr>
     </thead>
     <tbody>
@@ -25,6 +26,9 @@
                     <li>{{ flower.name }}</li> <!-- Отображаем название цветка -->
                     {% endfor %}
                 </ul>
+            </td>
+            <td>
+                <a href="{% url 'order_detail' order.pk %}">Посмотреть детали заказа</a> <!-- Здесь проверяем ссылку -->
             </td>
         </tr>
         {% empty %}
