--- a/flower_delivery/flowers/templates/order_detail.html
+++ b/flower_delivery/flowers/templates/order_detail.html
@@ -6,7 +6,7 @@
 <h1>Детали заказа №{{ order.id }}</h1>
 
 <p><strong>Дата заказа:</strong> {{ order.order_date|date:"d.m.Y H:i" }}</p>
-<p><strong>Статус заказа:</strong> {{ order.status }}</p>
+<p><strong>Статус заказа:</strong> {{ order.get_status_display }}</p>
 <p><strong>Адрес доставки:</strong> {{ order.address }}</p>
 
 <h3>Цветы в заказе:</h3>
@@ -21,10 +21,13 @@
     {% endif %}
 </ul>
 
+ <h3>Статус вашего заказа: {{ order.get_status_display }}</h3>
+
 <!-- Кнопки для изменения статуса заказа -->
 <h3>Изменить статус заказа:</h3>
-<a href="{% url 'update_order_status' order.id 'in_progress' %}" class="btn btn-warning">В процессе</a>
-<a href="{% url 'update_order_status' order.id 'delivered' %}" class="btn btn-success">Доставлен</a>
+<a href="{% url 'update_order_status' order.id 'in_progress' %}" class="btn btn-warning">В работе</a>
+<a href="{% url 'update_order_status' order.id 'in_delivery' %}" class="btn btn-info">В доставке</a>
+<a href="{% url 'update_order_status' order.id 'completed' %}" class="btn btn-success">Выполнен</a>
 
 <!-- Ссылка для возврата к истории заказов -->
 
